<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.masterkun.axor</groupId>
    <artifactId>axor</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>axor-commons</module>
        <module>axor-runtime</module>
        <module>axor-runtime-serde-kryo</module>
        <module>axor-api</module>
        <module>axor-testkit</module>
        <module>axor-runtime-serde-protobuf</module>
        <module>axor-runtime-stream-grpc</module>
        <module>axor-core</module>
        <module>axor-cluster</module>
    </modules>

    <repositories>
        <repository>
            <id>aliyun</id>
            <name>aliyun</name>
            <url>https://maven.aliyun.com/nexus/content/groups/public</url>
        </repository>
        <repository>
            <id>central</id>
            <name>central</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <properties>
        <dist.name>${project.name}-${project.version}</dist.name>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <typesafe.config.version>1.4.3</typesafe.config.version>
        <caffeine.version>3.1.8</caffeine.version>
        <disruptor.version>3.4.4</disruptor.version>
        <micrometer.version>1.13.3</micrometer.version>
        <kryo.version>5.6.2</kryo.version>
        <protobuf.version>4.29.2</protobuf.version>
        <protoc.version>4.29.2</protoc.version>
        <grpc.version>1.68.1</grpc.version>
        <slf4j.version>2.0.7</slf4j.version>
        <log4j2.version>2.20.0</log4j2.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.masterkun.axor</groupId>
                <artifactId>axor-commons</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.masterkun.axor</groupId>
                <artifactId>axor-runtime</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.masterkun.axor</groupId>
                <artifactId>axor-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.masterkun.axor</groupId>
                <artifactId>axor-testkit</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.masterkun.axor</groupId>
                <artifactId>axor-runtime-serde-kryo</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.masterkun.axor</groupId>
                <artifactId>axor-runtime-serde-protobuf</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.masterkun.axor</groupId>
                <artifactId>axor-runtime-stream-grpc</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.masterkun.axor</groupId>
                <artifactId>axor-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>26.0.1</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>io.masterkun.commons</groupId>
                <artifactId>stateeasy-persistence</artifactId>
                <version>0.1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.agrona</groupId>
                <artifactId>agrona</artifactId>
                <version>1.22.0</version>
            </dependency>
            <dependency>
                <groupId>com.typesafe</groupId>
                <artifactId>config</artifactId>
                <version>${typesafe.config.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lmax</groupId>
                <artifactId>disruptor</artifactId>
                <version>${disruptor.version}</version>
            </dependency>
            <dependency>
                <groupId>com.esotericsoftware</groupId>
                <artifactId>kryo</artifactId>
                <version>${kryo.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java-util</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-bom</artifactId>
                <version>${grpc.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-bom</artifactId>
                <version>${micrometer.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jctools</groupId>
                <artifactId>jctools-core</artifactId>
                <version>4.0.5</version>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>${log4j2.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>log4j-over-slf4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-bom</artifactId>
                <version>5.14.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Java Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <release>${maven.compiler.target}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>
                        -Dio.netty.leakDetection.level=PARANOID
                        -Djava.net.preferIPv4Stack=true
                        -Djava.net.preferIPv6Addresses=false
                        -XX:-RestrictContended
                        --add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
            </plugin>
        </plugins>
    </build>
</project>
